# Client-manager-S1.01-02

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  Instruction.md  LICENSE  README.md  Rapport algo.docx  data.h  main.c
algo/: algo_search.py  algo_sort.py
algorithms/: add.py  delete.py  filter.py  search.py  sort.py
commands/: commands.c  commands.h
resources/: test.csv
src/: data.h  main.c
src/commands/: commands.c  commands.h
src/commands/add/: add.c  add.h
src/commands/delete/: delete.c  delete.h
src/commands/edit/: edit.c  edit.h
src/commands/filter/: filter.c  filter.h
src/commands/help/: help.c  help.h
src/commands/load/: load.c  load.h
src/commands/save/: save.c  save.h
src/commands/search/: search.c  search.h
src/commands/show/: show.c  show.h
src/commands/sort/: sort.c  sort.h
src/utils/: customersUtils.c  customersUtils.h  utils.c  utils.h
src/utils/regex/: regex.c  regex.h
